# AtlasForms

./: .project  DOCUMENTATION.md  README.md  pom.xml  realm_config.json
auth/: providers.json
backend/: .env  finance.db  pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/db/: __init__.py
backend/app/routers/: auth.py  bank_accounts.py  currency.py  investments.py  loyalty.py
backend/app/services/: market_data.py
frontend/: .env  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: AccountOverview.tsx  ChangeLogTable.tsx  CurrencySelector.tsx  Dashboard.tsx  InvestmentAnalytics.tsx  LoyaltyAnalytics.tsx  ManualTransactionForm.tsx  SpendingAnalytics.tsx  TransactionUploader.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
hosting/: config.json
hosting/files/: appConfig.js
src/main/java/com/example/rbacsystem/: RbacSystemApplication.java
src/main/java/com/example/rbacsystem/config/: MyBatisConfig.java
src/main/java/com/example/rbacsystem/controller/: AuthController.java  RbacController.java
src/main/java/com/example/rbacsystem/dto/: LoginRequest.java  LoginResponse.java
src/main/java/com/example/rbacsystem/mapper/: PermissionMapper.java  RoleMapper.java  UserMapper.java
src/main/java/com/example/rbacsystem/model/: Permission.java  Role.java  User.java
src/main/resources/: application.properties  schema.sql
src/main/resources/mybatis/: PermissionMapper.xml  RoleMapper.xml  UserMapper.xml
(+4 files in other folders)
